(leim-list.el): Depends on leim-ext.el.   Appends the contents off leim-ext.el to leim-list.el.

--- a/leim/Makefile.in
+++ b/leim/Makefile.in
@@ -192,7 +192,7 @@ changed.misc: ${MISC-SOURCES}
 	  -f batch-miscdic-convert -dir quail ${srcdir}/MISC-DIC; \
 	  echo "changed" > $@
 
-leim-list.el: ${SUBDIRS} ${NON-TIT-MISC} changed.tit changed.misc
+leim-list.el: ${SUBDIRS} ${NON-TIT-MISC} changed.tit changed.misc ${srcdir}/leim-ext.el
 	${RUN-EMACS}  -l ${buildlisppath}/international/quail \
 	  -f batch-byte-compile-if-not-done ${TIT-MISC:.elc=.el}
 	if [ x`(cd ${srcdir} && /bin/pwd)` = x`(/bin/pwd)` ] ; then \
@@ -202,6 +202,7 @@ leim-list.el: ${SUBDIRS} ${NON-TIT-MISC} changed.tit changed.misc
 	  ${RUN-EMACS} -l ${buildlisppath}/international/quail \
 	    --eval "(update-leim-list-file \".\" \"${srcdir}\")" ; \
 	fi
+	sed -n '/^[^;]/ p' < ${srcdir}/leim-ext.el >> $@
 
 install: all
 	if [ x`(cd ${INSTALLDIR} && /bin/pwd)` != x`(/bin/pwd)` ] ; then \
