(bootstrap-nmake): When nmake'ing bootstrap on the lisp/ directory, set SHELL to $(SHELLTYPE); this avoids calling non-existent cmdproxy.exe on boostrappings after a previous install followed by realclean.

--- a/nt/makefile.w32-in
+++ b/nt/makefile.w32-in
@@ -139,7 +139,7 @@ bootstrap-nmake:
 	$(MAKE) $(MFLAGS) bootstrap
 	$(MAKE) $(MFLAGS) bootstrap-clean
 	cd ..\lisp
-	$(MAKE) $(MFLAGS) bootstrap
+	$(MAKE) $(MFLAGS) SHELL=$(SHELLTYPE) bootstrap
 	cd ..\lib-src
 	$(MAKE) $(MFLAGS) DOC
 	cd ..\nt
