--- a/lib-src/makefile.w32-in
+++ b/lib-src/makefile.w32-in
@@ -1,5 +1,5 @@
 #  -*- Makefile -*- for GNU Emacs on the Microsoft W32 API.
-#  Copyright (c) 2000-2001 Free Software Foundation, Inc.
+#  Copyright (c) 2000-2001, 2004 Free Software Foundation, Inc.
 #
 #  This file is part of GNU Emacs.
 #
@@ -425,5 +425,3 @@ $(BLD)/timer.$(O) : \
 $(BLD)/yow.$(O) : \
 	$(SRC)/yow.c \
 	$(EMACS_ROOT)/lib-src/../src/paths.h
-
-# arch-tag: c051bc02-a6de-474b-889a-27f7b2fbbcea
