--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -1,6 +1,6 @@
 #### Makefile for the Emacs Manual and other documentation.
 
-# Copyright (C) 1994, 1996, 1997, 1998, 1999, 2000, 2001, 2003
+# Copyright (C) 1994, 1996, 1997, 1998, 1999, 2000, 2001, 2003, 2004
 #  Free Software Foundation, Inc.
 
 # This file is part of GNU Emacs.
@@ -312,5 +312,3 @@ maintainer-clean: distclean
 # That caused trouble because this is run entirely in the source directory.
 # Since we expect to get texi2dvi from elsewhere,
 # it is ok to expect texindex from elsewhere also.
-
-# arch-tag: 19cdb89e-4acb-448e-b0cc-2ddc05948ee2
