--- a/nt/makefile.w32-in
+++ b/nt/makefile.w32-in
@@ -1,5 +1,5 @@
 #  -*- Makefile -*- for GNU Emacs on the Microsoft W32 API.
-#  Copyright (c) 2000-2001 Free Software Foundation, Inc.
+#  Copyright (c) 2000-2001, 2004 Free Software Foundation, Inc.
 #
 #  Top level makefile for building GNU Emacs on Windows NT
 #
@@ -281,5 +281,3 @@ cleanall: clean cleanall-other-dirs-$(MAKETYPE)
 
 realclean: cleanall
 	- $(DEL_TREE) ../bin
-
-# arch-tag: 6f5b23a6-774b-4598-9c29-58235b2b4219
