(INFO_TARGETS, DVI_TARGETS, EMACSSOURCES): Add emacs-xtra. ($(infodir)/emacs-xtra, emacs-xtra.dvi): New dependencies. (clean): Add emacs-xtra and flymake.  Remove redundancies.

--- a/man/makefile.w32-in
+++ b/man/makefile.w32-in
@@ -46,13 +46,14 @@ INFO_TARGETS = $(infodir)/emacs $(infodir)/ccmode \
 		$(infodir)/emacs-mime $(infodir)/eshell \
 		$(infodir)/speedbar $(infodir)/tramp \
 		$(infodir)/ses $(infodir)/smtpmail \
-		$(infodir)/flymake
+		$(infodir)/flymake $(infodir)/emacs-xtra
 DVI_TARGETS = 	emacs.dvi calc.dvi cc-mode.dvi cl.dvi dired-x.dvi \
 		 ediff.dvi forms.dvi gnus.dvi message.dvi mh-e.dvi \
 		 reftex.dvi sc.dvi vip.dvi viper.dvi widget.dvi faq.dvi \
 		 ada-mode.dvi autotype.dvi idlwave.dvi eudc.dvi ebrowse.dvi \
 		 pcl-cvs.dvi woman.dvi emacs-mime.dvi eshell.dvi \
-		 speedbar.dvi tramp.dvi ses.dvi smtpmail.dvi flymake.dvi
+		 speedbar.dvi tramp.dvi ses.dvi smtpmail.dvi flymake.dvi \
+		 emacs-xtra.dvi
 INFOSOURCES = info.texi
 
 # The following rule does not work with all versions of `make'.
@@ -66,6 +67,7 @@ ENVADD = $(srcdir)\..\nt\envadd.bat "TEXINPUTS=$(srcdir);$(TEXINPUTS)" \
 
 EMACSSOURCES= \
 	$(srcdir)/emacs.texi \
+	$(srcdir)/emacs-xtra.texi \
 	$(srcdir)/doclicense.texi \
 	$(srcdir)/screen.texi \
 	$(srcdir)/commands.texi \
@@ -297,6 +299,12 @@ $(infodir)/smtpmail: smtpmail.texi
 smtpmail.dvi: smtpmail.texi
 	$(ENVADD) $(TEXI2DVI) $(srcdir)/smtpmail.texi
 
+$(infodir)/emacs-xtra: emacs-xtra.texi
+	$(MAKEINFO) emacs-xtra.texi
+
+emacs-xtra.dvi: emacs-xtra.texi
+	$(ENVADD) $(TEXI2DVI) $(srcdir)/emacs-xtra.texi
+
 mostlyclean:
 	- $(DEL) *.log *.cp *.fn *.ky *.pg *.vr core *.tp *.core gnustmp.*
 
@@ -308,15 +316,15 @@ clean: mostlyclean
 		 $(infodir)/gnus* $(infodir)/info* \
 		 $(infodir)/message* $(infodir)/mh-e* \
 		 $(infodir)/reftex* $(infodir)/sc* \
-		 $(infodir)/vip* $(infodir)/viper* \
-		 $(infodir)/widget* $(infodir)/efaq* \
-		 $(infodir)/ada-mode* $(infodir)/autotype* \
-		 $(infodir)/calc* $(infodir)/idlwave* \
-		 $(infodir)/eudc* $(infodir)/ebrowse* \
-		 $(infodir)/pcl-cvs* $(infodir)/woman* \
-		 $(infodir)/emacs-mime* $(infodir)/eshell* \
+		 $(infodir)/vip* $(infodir)/widget* \
+		 $(infodir)/efaq* $(infodir)/ada-mode* \
+		 $(infodir)/autotype* $(infodir)/calc* \
+		 $(infodir)/idlwave* $(infodir)/eudc* \
+		 $(infodir)/ebrowse* $(infodir)/pcl-cvs* \
+		 $(infodir)/woman* $(infodir)/eshell* \
 		 $(infodir)/speedbar* $(infodir)/tramp* \
-		 $(infodir)/ses* $(infodir)/smtpmail*
+		 $(infodir)/ses* $(infodir)/smtpmail* \
+		 $(infodir)/flymake*
 
 distclean: clean
 
