Double percent signs in for loops.

--- a/lisp/makefile.w32-in
+++ b/lisp/makefile.w32-in
@@ -237,7 +237,7 @@ update-subdirs-CMD: doit
 	echo ;; In load-path, after this directory should come>> subdirs.el
 	echo ;; certain of its subdirectories.  Here we specify them.>> subdirs.el
 	echo (normal-top-level-add-to-load-path $(SQUOTE)(>> subdirs.el
-	@for %d in ($(WINS)) do if not (%d)==(term) echo "%d">> subdirs.el
+	@for %%d in ($(WINS)) do if not (%%d)==(term) echo "%%d">> subdirs.el
 	echo ))>> subdirs.el
 
 update-subdirs-SH: doit
@@ -282,11 +282,11 @@ $(DONTCOMPILE:.el=.elc):
 compile: subdirs.el compile-$(SHELLTYPE) doit
 
 compile-CMD:
-#	-for %f in ($(lisp) $(WINS)) do for %g in (%f\*.elc) do @attrib -r %g
-	for %f in ($(COMPILE_FIRST)) do \
-	  $(emacs) -l loaddefs -f batch-byte-compile-if-not-done %f
-	for %f in (. $(WINS)) do for %g in (%f/*.el) do \
-	  $(emacs) -l loaddefs -f batch-byte-compile-if-not-done %f/%g
+#	-for %%f in ($(lisp) $(WINS)) do for %%g in (%%f\*.elc) do @attrib -r %%g
+	for %%f in ($(COMPILE_FIRST)) do \
+	  $(emacs) -l loaddefs -f batch-byte-compile-if-not-done %%f
+	for %%f in (. $(WINS)) do for %%g in (%%f/*.el) do \
+	  $(emacs) -l loaddefs -f batch-byte-compile-if-not-done %%f/%%g
 
 compile-SH:
 #	for elc in $(lisp)/*.elc $(lisp)/*/*.elc; do attrib -r $$elc; done
@@ -309,9 +309,9 @@ compile-SH:
 compile-always: subdirs.el compile-always-$(SHELLTYPE) doit
 
 compile-always-CMD:
-#	-for %f in ($(lisp) $(WINS)) do for %g in (%f\*.elc) do @attrib -r %g
-	for %f in ($(COMPILE_FIRST)) do $(emacs) -f batch-byte-compile %f
-	for %f in (. $(WINS)) do for %g in (%f/*.el) do $(emacs) -f batch-byte-compile %f/%g
+#	-for %%f in ($(lisp) $(WINS)) do for %%g in (%%f\*.elc) do @attrib -r %%g
+	for %%f in ($(COMPILE_FIRST)) do $(emacs) -f batch-byte-compile %%f
+	for %%f in (. $(WINS)) do for %%g in (%%f/*.el) do $(emacs) -f batch-byte-compile %%f/%%g
 
 compile-always-SH:
 #	for elc in $(lisp)/*.elc $(lisp)/*/*.elc; do attrib -r $$elc; done
@@ -329,7 +329,7 @@ compile-always-SH:
 compile-calc: compile-calc-$(SHELLTYPE)
 
 compile-calc-CMD:
-	for %f in ($(lisp)/calc/*.el) do $(emacs) -f batch-byte-compile %f
+	for %%f in ($(lisp)/calc/*.el) do $(emacs) -f batch-byte-compile %%f
 
 compile-calc-SH:
 	for el in $(lisp)/calc/*.el; do \
@@ -374,7 +374,7 @@ bootstrap-clean: bootstrap-clean-$(SHELLTYPE) loaddefs.el
 bootstrap-clean-CMD:
 #	if exist $(EMACS) $(MAKE) $(MFLAGS) autoloads
 	if not exist $(lisp)\loaddefs.el cp $(lisp)/ldefs-boot.el $(lisp)/loaddefs.el
-	-for %f in (. $(WINS)) do for %g in (%f\*.elc) do @$(DEL) %g
+	-for %%f in (. $(WINS)) do for %%g in (%%f\*.elc) do @$(DEL) %%g
 
 bootstrap-clean-SH:
 #	if test -f $(EMACS); then $(MAKE) $(MFLAGS) autoloads; fi
