--- a/leim/Makefile.in
+++ b/leim/Makefile.in
@@ -1,6 +1,11 @@
 # Makefile for leim subdirectory in GNU Emacs.
-# Copyright (C) 1997, 2004 Electrotechnical Laboratory, JAPAN.
-# Licensed to the Free Software Foundation.
+# Copyright (C) 1997,98,1999,2000,2001 Electrotechnical Laboratory, JAPAN.
+#   Licensed to the Free Software Foundation.
+# Copyright (C) 1997,98,1999,2000,01,02,03,2004
+#   Free Software Foundation, Inc.
+# Copyright (C) 2001,02,03,2004
+#   National Institute of Advanced Industrial Science and Technology (AIST)
+#   Registration Number H14PRO021
 
 # This file is part of GNU Emacs.
 
