Removed the various "echo." lines from lisp\makefile.w32-in and nt\makefile.w32-in. They caused mingw32-make.exe bootstrap to fail with the following error if cmd.exe was being used as the shell:   "process_begin: CreateProcess((null), echo., ...) failed."
I replaced the "@echo." lines in nt\makefile.w32-in with "@echo ."  This writes a .
to the screen but that is far more desirable than make bootstrap failing.

I replaced the "echo. ..." line in lisp\makefile.w32-in with "echo ;;; ...".  This
writes an extra comment line to loaddefs.el.  Again this is far more desirable than
make bootstrap failing.

NOTE: I am using cmd.exe as my shell when building Emacs with MinGW instead of
the sh.exe that comes with msys because when I use sh.exe as my shell, loaddefs.el
does not get properly generated and I get various auto load errors.

--- a/lisp/makefile.w32-in
+++ b/lisp/makefile.w32-in
@@ -209,7 +209,7 @@ loaddefs.el-CMD:
 	echo (autoload 'define-derived-mode "derived")>> $@
 	echo (autoload 'encoded-kbd-mode "encoded-kb")>> $@
 	echo (defvar cvs-global-menu nil)>> $@
-	echo.>> $@
+	echo ;;; >> $@
 	echo ;;; Local Variables:>> $@
 	echo ;;; version-control: never>> $@
 	echo ;;; no-byte-compile: t>> $@
