Revision: miles@gnu.org--gnu-2004/emacs--unicode--0--patch-35
Fix damage caused by trunk merge in emacs--unicode--0--patch-15

Some files in the emacs--cvs-trunk--0 branch had their arch id-tag changed
from tagline to explicit [because they were used as template files, and their
syntax didn't accommodate stripping comments, so the the generated files
caused id-tag conflicts when an in-tree build was done].

Unfortunately arch doesn't handle id-tag changes well, so this resulted in
the files appearing to be deleted, and then added again.  When that changeset
was merged into the unicode branch, it resulted in unicode-specific changes
being dropped, and the trunk version being added.

To fix this, I restored these files to their pre-merge versions (from
emacs--unicode--0--patch-14), and then manually reapplied all changes from:

  (1) the unicode branch from the bogus merge point to the current version
      (emacs--unicode--0--patch-15 - emacs--unicode--0--patch-34)

  (2) the trunk from the bogus merge point to the latest version which was
      merged into the unicode branch
      (emacs--cvs-trunk--0--patch-218 - emacs--cvs-trunk--0--patch-522)

and fixed any conflicts (mostly due to doubly-applied patch hunks that patch
couldn't detect).

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -115,12 +115,15 @@ OBJ1 =  $(BLD)/abbrev.$(O)			\
 	$(BLD)/region-cache.$(O)		\
 	$(BLD)/strftime.$(O)			\
 	$(BLD)/charset.$(O)			\
+	$(BLD)/character.$(O)			\
+	$(BLD)/chartab.$(O)			\
 	$(BLD)/coding.$(O)			\
 	$(BLD)/category.$(O)			\
 	$(BLD)/ccl.$(O)				\
 	$(BLD)/fontset.$(O)			\
 	$(BLD)/fringe.$(O)			\
 	$(BLD)/image.$(O)
+
 
 WIN32OBJ = $(BLD)/w32term.$(O)			\
 	   $(BLD)/w32xfns.$(O)			\
@@ -167,7 +170,7 @@ $(EMACS):       $(DOC) $(TEMACS)
 temacs:         $(BLD) $(TEMACS)
 $(TEMACS):      $(TLIB0) $(TLIB1) $(TLIBW32) $(TLASTLIB) $(TOBJ) $(TRES)
 	$(LINK) $(LINK_OUT)$(TEMACS_TMP) $(FULL_LINK_FLAGS) $(TOBJ) $(TRES) $(LIBS)
-	"../nt/$(BLD)/addsection" "$(TEMACS_TMP)" "$(TEMACS)" EMHEAP 16
+	"../nt/$(BLD)/addsection" "$(TEMACS_TMP)" "$(TEMACS)" EMHEAP 20
 
 bootstrap: bootstrap-emacs
 
@@ -262,6 +265,7 @@ $(BLD)/abbrev.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/dispextern.h \
@@ -277,6 +281,7 @@ $(BLD)/alloc.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/composite.h \
 	$(SRC)/dispextern.h \
@@ -359,6 +364,7 @@ $(BLD)/callproc.$(O) : \
 	$(EMACS_ROOT)/nt/inc/sys/file.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/commands.h \
@@ -375,6 +381,7 @@ $(BLD)/casefiddle.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
@@ -396,6 +403,7 @@ $(BLD)/category.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
 	$(SRC)/category.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/keymap.h
 
@@ -405,8 +413,21 @@ $(BLD)/ccl.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h
+
+$(BLD)/character.$(O) : \
+	$(SRC)/character.c \
+	$(EMACS_ROOT)/src/s/ms-w32.h \
+	$(EMACS_ROOT)/src/m/intel386.h \
+	$(EMACS_ROOT)/src/config.h \
+	$(SRC)/buffer.h \
+	$(SRC)/character.h \
+	$(SRC)/charset.h \
+	$(SRC)/coding.h \
+	$(SRC)/composite.h \
+	$(SRC)/disptab.h
 
 $(BLD)/charset.$(O) : \
 	$(SRC)/charset.c \
@@ -415,10 +436,19 @@ $(BLD)/charset.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/composite.h \
 	$(SRC)/disptab.h
+
+$(BLD)/chartab.$(O) : \
+	$(SRC)/chartab.c \
+	$(EMACS_ROOT)/src/s/ms-w32.h \
+	$(EMACS_ROOT)/src/m/intel386.h \
+	$(EMACS_ROOT)/src/config.h \
+	$(SRC)/charset.h \
+	$(SRC)/character.h
 
 $(BLD)/cm.$(O) : \
 	$(SRC)/cm.c \
@@ -434,6 +464,7 @@ $(BLD)/cmds.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/dispextern.h \
@@ -451,6 +482,7 @@ $(BLD)/coding.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/composite.h \
@@ -466,6 +498,7 @@ $(BLD)/composite.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/composite.h \
 	$(SRC)/dispextern.h \
@@ -479,6 +512,7 @@ $(BLD)/data.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/frame.h \
 	$(SRC)/keyboard.h \
@@ -492,6 +526,7 @@ $(BLD)/dired.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/commands.h \
@@ -509,6 +544,7 @@ $(BLD)/dispnew.$(O) : \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/cm.h \
 	$(SRC)/commands.h \
@@ -537,6 +573,7 @@ $(BLD)/doc.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(EMACS_ROOT)/nt/inc/sys/file.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/keyboard.h \
 	$(SRC)/keymap.h
@@ -546,6 +583,7 @@ $(BLD)/doprnt.$(O) : \
 	$(EMACS_ROOT)/src/s/ms-w32.h \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.c
 
 $(BLD)/editfns.$(O) : \
@@ -556,6 +594,7 @@ $(BLD)/editfns.$(O) : \
 	$(EMACS_ROOT)/nt/inc/pwd.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/composite.h \
@@ -616,6 +655,7 @@ $(BLD)/fileio.$(O) : \
 	$(EMACS_ROOT)/nt/inc/sys/file.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/commands.h \
@@ -637,6 +677,7 @@ $(BLD)/filelock.$(O) : \
 	$(EMACS_ROOT)/src/epaths.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/systime.h
@@ -672,6 +713,7 @@ $(BLD)/fns.$(O) : \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/commands.h \
@@ -694,6 +736,7 @@ $(BLD)/fontset.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/dispextern.h \
 	$(SRC)/fontset.h \
@@ -711,6 +754,7 @@ $(BLD)/frame.$(O) : \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/dispextern.h \
@@ -772,6 +816,7 @@ $(BLD)/indent.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
 	$(SRC)/category.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/composite.h \
 	$(SRC)/dispextern.h \
@@ -795,6 +840,7 @@ $(BLD)/insdel.$(O) : \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/composite.h \
 	$(SRC)/dispextern.h \
@@ -830,6 +876,7 @@ $(BLD)/keyboard.$(O) : \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
@@ -861,6 +908,7 @@ $(BLD)/keymap.$(O) : \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
@@ -889,6 +937,7 @@ $(BLD)/lread.$(O) : \
 	$(EMACS_ROOT)/src/epaths.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/commands.h \
@@ -920,6 +969,7 @@ $(BLD)/marker.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h
 
 $(BLD)/md5.$(O) : \
@@ -932,6 +982,7 @@ $(BLD)/minibuf.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
@@ -999,6 +1050,7 @@ $(BLD)/w32console.$(O) : \
 	$(SRC)/s/ms-w32.h \
 	$(SRC)/m/intel386.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/config.h \
@@ -1016,6 +1068,7 @@ $(BLD)/print.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/composite.h \
 	$(SRC)/dispextern.h \
@@ -1039,6 +1092,7 @@ $(BLD)/process.$(O) : \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/commands.h \
@@ -1078,6 +1132,7 @@ $(BLD)/regex.$(O) : \
 	$(SRC)/m/intel386.h \
 	$(SRC)/buffer.h \
 	$(SRC)/category.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/config.h \
 	$(SRC)/regex.h \
@@ -1113,6 +1168,7 @@ $(BLD)/search.$(O) : \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
 	$(SRC)/category.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
@@ -1145,6 +1201,7 @@ $(BLD)/syntax.$(O) : \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/buffer.h \
 	$(SRC)/category.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
@@ -1189,6 +1246,7 @@ $(BLD)/term.$(O) : \
 	$(EMACS_ROOT)/src/m/intel386.h \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/cm.h \
 	$(SRC)/coding.h \
@@ -1285,6 +1343,7 @@ $(BLD)/xdisp.$(O) : \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/commands.h \
@@ -1316,6 +1375,7 @@ $(BLD)/xfaces.$(O): \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/composite.h \
 	$(SRC)/dispextern.h \
@@ -1338,6 +1398,7 @@ $(BLD)/w32fns.$(O): \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/composite.h \
@@ -1363,6 +1424,7 @@ $(BLD)/w32menu.$(O): \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/dispextern.h \
@@ -1385,6 +1447,7 @@ $(BLD)/w32term.$(O): \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/composite.h \
@@ -1416,6 +1479,7 @@ $(BLD)/w32select.$(O): \
 	$(SRC)/blockinput.h \
 	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/coding.h \
 	$(SRC)/composite.h \
@@ -1446,6 +1510,7 @@ $(BLD)/w32xfns.$(O): \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/fontset.h \
 	$(SRC)/frame.h \
@@ -1462,6 +1527,7 @@ $(BLD)/w32bdf.$(O): \
 	$(EMACS_ROOT)/src/config.h \
 	$(SRC)/atimer.h \
 	$(SRC)/blockinput.h \
+	$(SRC)/character.h \
 	$(SRC)/charset.h \
 	$(SRC)/dispextern.h \
 	$(SRC)/fontset.h \
