Fix typo in src/Makefile.in.
* src/Makefile.in (minibuf.o): Fix typo.


git-archimport-id: lorentey@elte.hu--2004/emacs--multi-tty--0--patch-245

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1120,7 +1120,7 @@ vm-limit.o: vm-limit.c mem-limits.h $(config_h)
 marker.o: marker.c buffer.h charset.h $(config_h)
 md5.o: md5.c md5.h $(config_h)
 minibuf.o: minibuf.c syntax.h dispextern.h frame.h window.h keyboard.h \
-   buffer.h commands.h charset.h msdos.h $(INTERVAL_SRC)) keymap.h \
+   buffer.h commands.h charset.h msdos.h $(INTERVAL_SRC) keymap.h \
    termhooks.h $(config_h)
 mktime.o: mktime.c $(config_h)
 msdos.o: msdos.c msdos.h dosfns.h systime.h termhooks.h dispextern.h frame.h \
